--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "language-mbdyn",
   "version": "0.1.0",
-  "description": "MBDyn free general purpose multibody analysis software (https://www.mbdyn.org/) syntax highlighting support",
+  "description": "Syntax highlighting support for free, general purpose, multibody analysis software MBDyn (https://www.mbdyn.org/)",
   "engines": {
     "atom": "*"
   },
