--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/zanoni-mbdyn/language-mbdyn.git"
+    "url": "git@github.com:zanoni-mbdyn/language-mbdyn.git"
   },
   "bugs": {
     "url": "https://github.com/zanoni-mbdyn/language-mbdyn/issues"
